--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
   --primaryColor: "#FFECEC";
   --primaryDarkColor: #ff4646;
+  --textColor:#FAFCFA;
+  --footertextColor:#C7CCCA;
   --cardBackgroundColor: #1C1C1C;
   --borderColor: gray;
   --warningColor: red;
